syntax = "proto3";

import "google/protobuf/empty.proto";
import "common/proto/common.proto";

package owl.cfc;
option go_package = "cfcpb";

service OwlCfcService {
  // RegisterAgent 客户端注册
  rpc RegisterAgent(owl.common.AgentInfo) returns(google.protobuf.Empty);
  // ListAgentPlugins 列出客户端需要执行的插件
  rpc ListAgentPlugins(owl.common.HostIdReq) returns(owl.common.Plugins);
  // ReceiveAgentHeartbeat 接收客户端上报的心跳
  rpc ReceiveAgentHeartbeat(owl.common.AgentInfo) returns(google.protobuf.Empty);
  // ReceiveAgentMetric 接收客户端上报的Metric
  rpc ReceiveAgentMetric(owl.common.Metric) returns(google.protobuf.Empty);
  // ReceiveAgentMetrics 接收客户端上报的批量Metric
  rpc ReceiveAgentMetrics(owl.common.Metrics) returns(google.protobuf.Empty);
}
